# freelang-bank-system

./: CHECKPOINT.md  COMPLETION_STATUS.txt  COMPREHENSIVE_TEST.sh  Cargo.toml  DEPLOYMENT_CHECKLIST.md  Dockerfile.api  Dockerfile.dashboard  ENHANCED_FEATURES.md  FINAL_COMPLETION_REPORT.md  FINAL_SUMMARY.md  FREELANG_ECOSYSTEM_STATUS.md  FREELANG_ROADMAP_SUMMARY.txt  MISSING_CHECKLIST.md  PHASE4_README.md  PHASE5_README.md  PHASE6_DEPLOYMENT.md  PROJECT_COMPLETION_SUMMARY.txt  README.md  SYSTEM_DESIGN.md  TEST_EXECUTION_REPORT.md  auth_test.go  bank.db  bank_system_test.go  demo.js  docker-compose.yml  freelang_bank.db  go.mod  go.sum  k8s-api-deployment.yaml  k8s-dashboard-deployment.yaml  k8s-ingress.yaml  k8s-namespace.yaml  k8s-storage.yaml  main.go  nginx.conf  phase3_demo.js  phase4_test.go  prometheus.yml  stage2_transaction.fl  stage3_concurrency.fl  (+5 more)
.claude/memory/: MEMORY.md
dashboard/: index.html  package-lock.json  package.json
dashboard/dashboard/: package.json
dashboard/public/: index.html
dashboard/src/: App.css  App.tsx
dashboard/src/components/: AccountList.tsx  AuthForm.tsx  Dashboard.tsx  FraudDetection.tsx  TransactionForm.tsx
examples/: simple_banking.fl
handlers/: account.go  auth.go  transaction.go
server/: go.mod  main.go
server/database/: database.go
server/handlers/: account.go  auth.go  fraud.go  report.go  transaction.go
src/: account.fl  api.fl  bank.fl  database.fl  fraud_detector.fl  interest_calculator.fl  transaction.fl
src/db/: db.go  schema.sql
tests/: integration_test.fl  phase3_test.fl
(+3 files in other folders)
