[package]
name = "freelang-bank-system"
version = "1.0.0"
edition = "2021"
description = "Complete banking system implemented in FreeLang"

[dependencies]
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
rand = "0.8"
uuid = { version = "1.6", features = ["v4", "serde"] }

[[example]]
name = "simple_banking"
path = "examples/simple_banking.fl"

[[test]]
name = "integration_test"
path = "tests/integration_test.fl"
